--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.application.name=restaurant
 server.port = 8088
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3307/sa
+spring.datasource.url=jdbc:mysql://localhost:3306/sa2
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=test
 
 # JPA
 spring.jpa.show-sql=true
