--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.username=root
 spring.jpa.show-sql=true
 Spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JWT
+app.jwtSecret= 84b906030d48527ce05c36820f94c9a3
+app.jwtExpirationMs=86400000
