stripe payment url

--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+		<!-- stripe-->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>21.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
