--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=restaurant
 
 server.port = 8088
 
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 # Set the default encoding for the server
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
